specify bin path

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "create-trfl-dapp",
   "version": "0.1.0",
   "description": "",
-  "main": "index.js",
+  "bin": "./bin/create-trfl-dapp.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
