--- a/package.json
+++ b/package.json
@@ -1,13 +1,14 @@
 {
   "name": "create-trfl-dapp",
   "version": "0.1.0",
-  "description": "",
+  "description": "Create Truffle dapps with minimal configuration.",
   "bin": "./bin/create-trfl-dapp.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [
-    "truffle"
+    "truffle",
+    "blockchain"
   ],
   "author": "Cruz Molina",
   "license": "MIT",
